tests/NormalTests/paczka1/small_fuzzy/56075377.err
Error in line 3: uYlG2o S927 55,8
Error in line 4: uYlG2o S867 83,7
